welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:3: error: value poseBiscuit is not a member of Unit
def av() {prendBiscuit; for (i<- 0 to 4) {avance()} poseBiscuit}
                                                    ^