welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
def rec() {for (i<- 0 to 4) {recule()}}
def av() {prendBiscuit; for (i<- 0 to 4) {avance()} poseBiscuit}

for (1 <- 0 to 9)
{rec()
av()}





gauche()
avance()
gauche()
avance()